# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/: AGENTS.md
backend/app/: ai.py  board_seed.py  config.py  dependencies.py  main.py  models.py  storage.py
backend/tests/: conftest.py  test_main.py
docs/: CODE_REVIEW.md  DATABASE.md  PLAN.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  HomeScreen.test.tsx  HomeScreen.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx
frontend/src/lib/: auth.ts  boardApi.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1  stop-linux.sh
