[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.116.1,<0.117",
  "uvicorn>=0.35.0,<0.36",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1,<0.29",
  "pytest>=8.4.1,<9",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.uv]
package = false
